fix: flexbox incorrect flex when parent nowrap

--- a/packages/void-ui/src/components/layout/flexbox/flexbox.scss
+++ b/packages/void-ui/src/components/layout/flexbox/flexbox.scss
@@ -11,7 +11,7 @@
   min-width: 0;
   min-height: 0;
 
-  flex: 1 1;
+  flex: 1;
 
   display: flex;
   flex-flow: row wrap;
@@ -146,7 +146,7 @@
   }
 
   @include when('percentage') {
-    flex: 1 1 100%;
+    flex: 1 0 100%;
   }
 
   @include when('hidden') {
